--- a/config.json
+++ b/config.json
@@ -113,7 +113,7 @@
         "request": [
             {
                 "include": "phalcon/mvc/model/orm.h",
-                "code": "phalcon_orm_destroy_cache(TSRMLS_C)"
+                "code": "phalcon_orm_destroy_cache()"
             }
         ]
     }
